--- a/article.html
+++ b/article.html
@@ -165,7 +165,7 @@
                 <h2>Overview of Porn Addiction</h2>
            
                 <a href = "Overview.html"> 
-				<p> by: Gordoncillo, M.K (2024)
+				<p> by: Gordoncillo, M.K (2024)</p>
 				<img src="467472991_882082787412971_2775053668528928718_n.jpg" alt="Overview of Porn Addiction" height="200px"> 
 				</a> 
 				
